test/visibility/errors/issue-21289-2.chpl
module foo {
    record bar_t{
        var a: int;
    }
    proc bar(x: int){
        return x;
    }
}

use foo;
foo.bar.t;
// Note this is incorrect and should be;
foo.bar_t;
