test/visibility/errors/issue-21289-2.good
issue-21289-2.chpl:10: warning: an implicit module named 'issue-21289-2' is being introduced to contain file-scope code
issue-21289-2.chpl:11: error: unresolved call 'foo.proc(x: int): int.t'
issue-21289-2.chpl:11: note: because no functions named t found in scope
